# ML-Object-Picking-Robot

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  enter.sh  fix_build.sh  run_sim.sh  setup-complete.sh
config/: development.yaml  logging.yaml  production.yaml  staging.yaml
docker/: docker-compose.yml
ros2_ws/: run_gazebo_sim.sh
ros2_ws/src/motion_planning/: CMakeLists.txt
ros2_ws/src/motion_planning/config/: kdl_config.yaml  motion_params.yaml  safety_limits.yaml
ros2_ws/src/motion_planning/include/motion_planning/: collision_checker.hpp  inverse_kinematics.hpp  path_optimizer.hpp  trajectory_planner.hpp
ros2_ws/src/motion_planning/launch/: motion_planning.launch.py
ros2_ws/src/motion_planning/src/: collision_checker.cpp  inverse_kinematics.cpp  motion_control_node.cpp  path_optimizer.cpp  trajectory_planner.cpp
ros2_ws/src/perception_stack/: CMakeLists.txt  setup.py
ros2_ws/src/perception_stack/perception_stack/: yolo_detector_node.py
ros2_ws/src/perception_stack/perception_stack/utils/: postprocessing.py  preprocessing.py  visualization.py
ros2_ws/src/robot_control/: CMakeLists.txt  setup.py
ros2_ws/src/robot_control/config/: motor_params.yaml  servo_calibration.yaml
ros2_ws/src/robot_control/include/robot_control/: gripper_control.hpp  motor_driver.hpp  servo_controller.hpp
ros2_ws/src/robot_control/launch/: robot_control.launch.py
ros2_ws/src/robot_control/src/: gripper_control.cpp  hardware_interface_node.cpp  motor_driver.cpp  servo_controller.cpp
ros2_ws/src/robot_description/: CMakeLists.txt
ros2_ws/src/robot_description/launch/: complete_system.launch.py  gazebo.launch.py
ros2_ws/src/robot_description/urdf/: robot.urdf.xacro
ros2_ws/src/robot_description/worlds/: picking_world.world
ros2_ws/src/robot_interfaces/: CMakeLists.txt
ros2_ws/src/robot_interfaces/msg/: GripperState.msg  ObjectDetection.msg  RobotState.msg
ros2_ws/src/robot_interfaces/srv/: GraspObject.srv  PickObject.srv
ros2_ws/src/system_monitor/: CMakeLists.txt  setup.py
ros2_ws/src/system_monitor/system_monitor/: health_checker.py  logger_node.py  performance_monitor.py
ros2_ws/src/task_planning/: CMakeLists.txt  README.md  setup.py
ros2_ws/src/task_planning/include/task_planning/: version.hpp.in
ros2_ws/src/task_planning/task_planning/: pick_place_coordinator.py  pick_place_planner.py  safety_monitor.py  state_machine.py  task_executor.py
